--- a/1 Advanced web design/1-1 HTML 基础 0716/02 练习 李清照简介.html
+++ b/1 Advanced web design/1-1 HTML 基础 0716/02 练习 李清照简介.html
@@ -10,7 +10,7 @@
 <body>
     <h1>人物简介</h1>
     <p>
-        <b>李清照</b>（1084年3月13日~1155年5月12日），宋代女词人，号易安居 <br>
+        <b>李清照</b>（<i>1084年3月13日~1155年5月12日</i>），宋代女词人，号易安居 <br>
         士，婉约词派代表，有“千古第一才女”之称。早期生活优裕，金兵入 <br>
         据中原时，流寓南方，境遇孤苦。所作词，前期多写其悠闲生活，后期 <br>
         多悲叹身世，情调伤感。形式上善用白描手法，自辟途径，语言清丽。 <br>
