李清照简介 3.0

--- a/1 Advanced web design/1-1 HTML 基础 0716/02 练习 李清照简介.html
+++ b/1 Advanced web design/1-1 HTML 基础 0716/02 练习 李清照简介.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>李清照简介</title>
 </head>
 
 <body>
@@ -18,6 +18,7 @@
         法作词，留有诗集《易安居士文集》、《易安词》等。
     </p>
     <hr>
+    <!-- 字符实体 特殊字符固定标记 -->
     <p>&copy;&nbsp;北大青鸟版权所有</p>
 </body>
 
