--- a/1 Advanced web design/1-1 HTML 基础 0716/03 图片标签.html
+++ b/1 Advanced web design/1-1 HTML 基础 0716/03 图片标签.html
@@ -23,8 +23,13 @@
     <img src="../img/ab3.jpg" alt="食品3">
     <hr>
     <!-- 网上资源引入 -->
-
     <img src="https://www.bing.com/th/id/OIP.3y3aVa2QU0tVj_-xZ1tZegAAAA?w=164&h=180&c=7&r=0&o=5&dpr=1.5&pid=1.7" alt="">
+    <hr>
+    <img src="https://gw.alicdn.com/imgextra/i4/O1CN01H11jUw1gVppn3YjsM_!!6000000004148-2-tps-480-144.png" alt="">
+    <hr>
+    <!-- 引入矢量图 -->
+    <img src="img/home gray 64.png" alt="">
+    <img src="img/home red 64.png" alt="">
 </body>
 
 </html>
