--- a/1 Advanced web design/1-1 HTML 基础 0716/04阿里巴巴矢量图.html
+++ b/1 Advanced web design/1-1 HTML 基础 0716/04阿里巴巴矢量图.html
@@ -15,8 +15,17 @@
     3.解压下载的download压缩包，拖入项目中，改名字iconfont
     4.引入iconfont.css
     备注：你可以参照demo_index.html 示例学习使用
+    如果需要改大小和颜色，可以自定义样式添加。
     -->
-    <span class="icon iconfont">&#xe690;</span>
+    <span class="icon iconfont gouwuche">&#xe690;</span>
+    <hr>
+    <span class="iconfont icon-gouwuche"></span>
 </body>
+<style>
+    .gouwuche {
+        color: red;
+        font-size: 40px;
+    }
+</style>
 
 </html>
