--- a/1 Advanced web design/1-2 表单/02表格 样式.html
+++ b/1 Advanced web design/1-2 表单/02表格 样式.html
@@ -50,5 +50,43 @@
         </tbody>
     </table>
 </body>
+<!-- 层叠样式表 -->
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+    }
+
+    table {
+        width: 700px;
+        border: 3px solid #a7a7a7;
+        margin: 0 auto;
+        border-spacing: 0;
+    }
+
+    th,
+    td {
+        border: 1px solid #ccc;
+        padding: 5px 10px;
+        text-align: center;
+    }
+
+    /* 隔行变色 */
+    thead tr:nth-child(odd) {
+        background-color: yellow;
+    }
+
+    thead tr:nth-child(even) {
+        background-color: #aaa;
+    }
+
+    tbody tr:nth-child(odd) {
+        background-color: yellowgreen;
+    }
+
+    tbody tr:nth-child(even) {
+        background-color: #aaa;
+    }
+</style>
 
 </html>
