--- a/1 Advanced web design/1-4CSS美化样式/01字体样式.html
+++ b/1 Advanced web design/1-4CSS美化样式/01字体样式.html
@@ -11,7 +11,7 @@
                                 em:根据父元素的比例设置
                                 rem:(root)根据网页根元素的比例设置  根元素html
         2.字体粗细  font-weight 磅值 400正常 700加粗 |关键词bold
-        3.字体倾斜  font-size   italic倾斜
+        3.字体倾斜  font-style   italic倾斜
         4.字体类型  font-family
     注意:中英文字混合使用的时候,英文样式放在前面
 
