--- a/1 Advanced web design/1-6横向布局-浮动0722/02使用浮动float横向排列.html
+++ b/1 Advanced web design/1-6横向布局-浮动0722/02使用浮动float横向排列.html
@@ -23,12 +23,10 @@
     <span>我是span</span>
 </body>
 <!-- 浮动:    float  让元素脱离标准文档流,显示在标准文档流上一层,原先在标准文档流中的位置会丢失,被后面的元素所替代
-                值:left  元素从左到右依次脱离标准文档流
+                值: left  元素从左到右依次脱离标准文档流
                     right 元素从右到左依次脱离标准文档流
-                    none 不浮动
+                    none 不浮动(默认)
                     元素之间没有间隙的
-
-
 
 -->
 <style>
