--- a/1 Advanced web design/1-7定位0723.html/06带按钮的轮播广告.html
+++ b/1 Advanced web design/1-7定位0723.html/06带按钮的轮播广告.html
@@ -5,10 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>带按钮的轮播广告</title>
+    <style>
+        .main {
+            height: 130px;
+            width: 426px;
+            background: url(img/adver-01.jpg) no-repeat;
+            border-radius: 10px;
+            border: 1px solid black;
+            position: relative;
+        }
+
+        button {
+            position: absolute;
+            bottom: 5px;
+            height: 20px;
+            width: 20px;
+        }
+
+        .fifth {
+            right: 5px;
+        }
+
+        .fourth {
+            right: 30px;
+        }
+
+        .thrid {
+            right: 55px;
+        }
+
+        .second {
+            right: 80px;
+        }
+
+        .first {
+            right: 110px
+        }
+    </style>
 </head>
 
 <body>
-
+    <div class="main">
+        <button class="first">1</button>
+        <button class="second">2</button>
+        <button class="thrid">3</button>
+        <button class="fourth">4</button>
+        <button class="fifth">5</button>
+    </div>
 </body>
 
 </html>
