--- a/2 Responsive layout/01 媒体查询 0729/1-4 综合摄影展响应式.html
+++ b/2 Responsive layout/01 媒体查询 0729/1-4 综合摄影展响应式.html
@@ -10,12 +10,183 @@
 <body>
     <div class="box">
         <div class="top">
-
+            <div class="left">
+                <img src="img/bann.jpg" alt="">
+            </div>
+            <div class="right">
+                <div class="pic_phone">
+                    <img src="img/ph.png" alt="">
+                </div>
+                <div class="pic_tv">
+                    <img src="img/tv.png" alt="">
+                </div>
+            </div>
         </div>
         <div class="content">
+            <div class="item_pic">
+                <img src="img/pic.jpg" alt="">
+                <p>摄影图片00</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic1.jpg" alt="">
+                <p>摄影图片01</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic2.jpg" alt="">
+                <p>摄影图片02</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic3.jpg" alt="">
+                <p>摄影图片03</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic4.jpg" alt="">
+                <p>摄影图片04</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic5.jpg" alt="">
+                <p>摄影图片05</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic6.jpg" alt="">
+                <p>摄影图片06</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic7.jpg" alt="">
+                <p>摄影图片07</p>
+            </div>
+            <div class="item_pic">
+                <img src="img/pic8.jpg" alt="">
+                <p>摄影图片08</p>
+            </div>
 
         </div>
     </div>
 </body>
+
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+    }
+
+
+
+    .top {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border: 1px solid red;
+    }
+
+    .right {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        width: 50%;
+    }
+
+    .right div {
+        width: 48%;
+    }
+
+    .right div img {
+        width: 100%;
+    }
+
+    .left {
+        width: 50%;
+        padding: 15px;
+    }
+
+    .left img {
+        width: 100%;
+    }
+
+    /* 屏幕的宽度小于768px顶部分成两行
+    left 上
+    right 下
+    */
+
+    @media screen and (max-width:768px) {
+        .top {
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        /* 左右两边div 宽度 100% */
+        .left {
+            width: 98%;
+        }
+
+        .right {
+            width: 98%;
+        }
+    }
+
+    .content {
+        display: flex;
+        /* 多轴对齐 */
+        flex-wrap: wrap;
+        /* 主轴对齐方式 */
+        justify-content: space-between;
+        align-content: flex-start;
+        /* 假设默认情况 一行显示4个 */
+
+    }
+
+    .item_pic {
+        box-sizing: border-box;
+        width: 25%;
+        padding: 10px;
+        border-radius: 10px;
+        margin: 20px 0;
+        box-shadow: 2px 2px 15px #ccc;
+
+    }
+
+    .item_pic img {
+        width: 100%;
+    }
+
+    .item_pic p {
+        font-size: 20px;
+        color: #aaa;
+        font-weight: bold;
+        text-align: center;
+        line-height: 40px;
+    }
+
+    /* 底部响应式 */
+    @media screen and (min-width:1024px) {
+        .item_pic {
+            width: 23%;
+        }
+    }
+
+    @media screen and (min-width:768px) and (max-width:1024px) {
+        .item_pic {
+            width: 32%;
+        }
+    }
+
+    @media screen and (min-width:420px) and (max-width:768px) {
+        .item_pic {
+            width: 48%;
+        }
+    }
+
+    @media screen and (max-width:420px) {
+        .item_pic {
+            width: 90%;
+        }
+
+        .content {
+            justify-content: center;
+        }
+    }
+</style>
 
 </html>
