公安机关登录页

--- a/2 Responsive layout/02 bootstrap/07 公安机关登录页.html
+++ b/2 Responsive layout/02 bootstrap/07 公安机关登录页.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>bootstrap基本样式</title>
+    <title>公安机关登录页</title>
     <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 
@@ -88,7 +88,6 @@
             <p>邮箱：support@beian.gov.cn</p>
             <p>京公网安备11010102002019号建议使用1024*768以上分率浏览</p>
         </div>
-
     </footer>
 </body>
 <style>
