--- a/2 Responsive layout/03 bootstrap组件0731/09 课工场导航条.html
+++ b/2 Responsive layout/03 bootstrap组件0731/09 课工场导航条.html
@@ -9,8 +9,82 @@
 </head>
 
 <body>
-
+    <div class="navbar  navbar-inverse navbar-fixed-top">
+        <div class="container-fluid">
+            <div class="navbar-btn navbar-right navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+                <li class="icon-bar"></li>
+                <li class="icon-bar"></li>
+                <li class="icon-bar"></li>
+                <li class="icon-bar"></li>
+            </div>
+            <div class="navbar-header">
+                <a href="#" class="navbar-brand">
+                    <img src="img/logo.png" alt="" class="img-responsive">
+                </a>
+            </div>
+            <ul class="nav navbar-nav navbar-collapse">
+                <li class="active"><a href="#">首页</a></li>
+                <li><a href="#">入门课</a></li>
+                <li><a href="#">岗位课</a></li>
+                <li><a href="#">技能库</a></li>
+                <li><a href="#">微社区</a></li>
+                <li class="nav-item-inline">
+                    <a href="#">学员</a>
+                    <!-- <button class="btn btn-danger" type="submit">new</button> -->
+                </li>
+            </ul>
+            <form class="navbar-form navbar-right" action="#">
+                <div class="input-group input-group-sm">
+                    <input type="text" class="form-control" placeholder="请输入要搜索的内容">
+                    <span class="input-group-btn">
+                        <button class="btn btn-success" type="submit">搜索</button>
+                    </span>
+                </div>
+            </form>
+            <p class="navbar-text navbar-right">注册</p>
+            <p class="navbar-text navbar-right">登录</p>
+            <div class="navbar-header navbar-right hidden-lg hidden-md hidden-sm">
+                <!-- 隐藏在大中小屏幕，显示在超小屏幕 -->
+                <p class="navbar-text">登录</p>
+                <p class="navbar-text">注册</p>
+            </div>
+        </div>
+    </div>
 </body>
+<style>
+    * {
+        padding: 0;
+        margin: 0;
+        list-style: none;
+        text-decoration: none;
+    }
+
+    .navbar-brand {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 50px;
+        margin-left: 40px;
+    }
+
+    @media screen and (max-width:940px) {
+        form {
+            display: none;
+        }
+    }
+
+    @media screen and (max-width: 768px) {
+        .navbar-header .navbar-text {
+            display: inline-block;
+        }
+    }
+
+    .nav-item-inline {
+        /* display: flex; */
+        /* align-items: center; */
+        /* width: 150px; */
+    }
+</style>
 <!-- 引入jquery -->
 <script src="js/jquery-1.12.4.js"></script>
 <!-- 引入bootstrap js -->
