--- a/2 Responsive layout/03 bootstrap组件0731/09 课工场导航条.html
+++ b/2 Responsive layout/03 bootstrap组件0731/09 课工场导航条.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <div class="navbar  navbar-inverse navbar-fixed-top">
+    <div class="navbar  navbar-inverse navbar-fixed-top" id="m1">
         <div class="container-fluid">
             <div class="navbar-btn navbar-right navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <li class="icon-bar"></li>
@@ -80,6 +80,10 @@
         width: 100px;
         display: flex;
         align-items: center;
+    }
+
+    #m1 {
+        margin-top: 40px;
     }
 </style>
 <!-- 引入jquery -->
